ini: 使用 CSimpleIniW 读取；增加新常量

--- a/nvdaCfg.ini
+++ b/nvdaCfg.ini
@@ -1,27 +1,27 @@
 ; 适用于 NVDA 桥接保益读屏
-; 注意：配置文件放置在和 nvdaControllerClient.dll 相同的目录下.
+; 注意: 配置文件放置在和 nvdaControllerClient.dll 相同的目录下.
 ;   此配置文件仅在加载时读取一次，修改需要重启游戏才能生效。
 
 [NvdaDll]
-; 调试日志选项：0=（默认）输出info级别的日志；1=输出debug级别的调试日志
+; 调试日志选项: 0=（默认）输出info级别的日志; 1=输出debug级别的调试日志
 ;   DLL 始终会生成 nvdaDll.log 日志，默认记录 INFO 级别的日志。
 DEBUG_LOG=0
 
-; 生成保益接口的调用日志：0=（默认）不生成; 1=生成 boyCtrl-debug.log
+; 生成保益接口的调用日志: 0=（默认）不生成; 1=生成 boyCtrl-debug.log
 ;   注意！调用日志会记录每一次 API 调用，日志大小增长很快，主要是用于接口调试。
 BOY_LOG=0
 
-; 独立通道：0=（默认）使用读屏通道；1=使用独立通道
+; 独立通道: 0=（默认）使用读屏通道; 1=使用独立通道
 USE_CHANNEL=0
 
-; 打断控制：0=（默认）程序自行决定是否排队朗读，DLL不做处理；1=自定义，可在下方设置是否排队朗读。
+; 打断控制: 0=（默认）程序自行决定是否排队朗读，DLL不做处理; 1=自定义，可在下方设置是否排队朗读。
 BREAK_CTRL=0
 
-; 排队朗读：打断控制=1时有效。 0=打断朗读；1=（默认）排队朗读。
+; 排队朗读: 打断控制=1时有效。 0=打断朗读; 1=（默认）排队朗读。
 USE_APPEND=1
 
-; 按键打断模式：0=按键不打断朗读；1=（默认）仅按下打断键打断；2=按下任意按键可以打断朗读
+; 按键打断模式: 0=按键不打断朗读; 1=（默认）仅按下打断键打断; 2=按下任意按键可以打断朗读
 INTERRUPT_MODE=1
 
-; 允许读屏打断朗读：0=不允许；1=（默认）允许
+; 允许读屏打断朗读: 0=不允许; 1=（默认）允许
 ALLOW_SR_INTERRUPT=1
