--- a/nvdaCfg.ini
+++ b/nvdaCfg.ini
@@ -17,11 +17,12 @@ USE_CHANNEL=0
 ; 允许读屏打断朗读: 0=不允许; 1=（默认）允许
 ALLOW_SR_INTERRUPT=1
 
-; 打断控制: 0=（默认）程序自行决定是否排队朗读，DLL不做处理; 1=自定义，可在下方设置是否排队朗读。
-BREAK_CTRL=0
+; 打断控制: 0=程序自行决定是否排队或打断; 1=（默认）由DLL后续的配置控制。
+BREAK_CTRL=1
 
-; 排队朗读: 打断控制=1时有效。 0=打断朗读; 1=（默认）排队朗读。
+; 排队朗读(打断控制=1时有效): 0=打断朗读; 1=（默认）排队朗读。
 USE_APPEND=1
 
-; 按键打断模式: 0=按键不打断朗读; 1=（默认）仅按下打断键打断; 2=按下任意按键可以打断朗读
+; 按键打断模式(打断控制=1时有效): 0=拦截程序的打断请求，不打断; 1=（默认）仅按下打断键打断; 2=按下任意按键可以打断朗读
+;   默认的 1=仅按下打断键打断，也受"允许读屏打断朗读"设置的影响
 INTERRUPT_MODE=1
